[package]
name = "nodrift"
version.workspace = true
description = "no Drift is an application for scheduling recurring jobs"
license = "MIT"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.81"
chrono = "0.4.40"
thiserror = "2.0.0"
tokio.workspace = true
tokio-util = "0.7.11"
tracing.workspace = true

[dev-dependencies]
tracing-test = "0.2.5"
